<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_info_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFE4EA">

        <TextView
            android:id="@+id/feels_like_temperature"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            tools:text="@string/ex_temperature"
            android:textSize="24sp"
            app:drawableTopCompat="@drawable/ic_thermometer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="top"
            android:text="@string/description_feels_like"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="@id/feels_like_temperature"
            app:layout_constraintStart_toStartOf="@id/feels_like_temperature"
            app:layout_constraintTop_toBottomOf="@id/feels_like_temperature" />

        <TextView
            android:id="@+id/winder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            tools:text="@string/ex_direction_wind"
            android:textSize="24sp"
            app:drawableTopCompat="@drawable/ic_wind"
            app:layout_constraintEnd_toStartOf="@id/atm_pressure"
            app:layout_constraintStart_toEndOf="@id/feels_like_temperature"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="top"
            android:text="@string/description_direction_wind"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="@id/winder"
            app:layout_constraintStart_toStartOf="@id/winder"
            app:layout_constraintTop_toBottomOf="@id/winder" />

        <TextView
            android:id="@+id/atm_pressure"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            tools:text="@string/ex_pressure"
            android:textSize="20sp"
            app:drawableTopCompat="@drawable/ic_barometer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:text="@string/description_pressure"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="@id/atm_pressure"
            app:layout_constraintStart_toStartOf="@id/atm_pressure"
            app:layout_constraintTop_toBottomOf="@id/atm_pressure" />


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/visibility_weather"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            tools:text="@string/ex_visibility"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:drawableTopCompat="@drawable/ic_eye" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="top"
            android:text="@string/description_visibility"
            app:layout_constraintEnd_toEndOf="@id/visibility_weather"
            app:layout_constraintStart_toStartOf="@id/visibility_weather"
            app:layout_constraintTop_toBottomOf="@id/visibility_weather" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            tools:text="@string/ex_humidity"
            android:textSize="24sp"
            app:drawableTopCompat="@drawable/ic_humidity"
            app:layout_constraintEnd_toStartOf="@id/cloudiness"
            app:layout_constraintStart_toEndOf="@id/visibility_weather"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="top"
            android:text="@string/description_humidity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/humidity"
            app:layout_constraintStart_toStartOf="@id/humidity"
            app:layout_constraintTop_toBottomOf="@id/humidity" />

        <TextView
            android:id="@+id/cloudiness"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            tools:text="@string/ex_cloudiness"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:drawableTopCompat="@drawable/ic_cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/description_cloudiness"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="@id/cloudiness"
            app:layout_constraintStart_toStartOf="@id/cloudiness"
            app:layout_constraintTop_toBottomOf="@id/cloudiness" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>