<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D1B17B">

        <TextView
            android:id="@+id/time_step_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_time"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/image_step_weather"
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:contentDescription="@string/description_step_weather_image"
            android:src="@drawable/default_icon_weather"
            app:layout_constraintTop_toBottomOf="@id/time_step_weather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/temperature_step_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_temperature"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_step_weather"/>

        <TextView
            android:id="@+id/min_step_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ex_min_temperature"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/max_step_temperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temperature_step_weather"
            app:drawableBottomCompat="@drawable/ic_down"
            app:drawableTint="@color/white" />

        <TextView
            android:id="@+id/max_step_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ex_max_temperature"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/min_step_temperature"
            app:layout_constraintTop_toBottomOf="@id/temperature_step_weather"
            app:drawableBottomCompat="@drawable/ic_up"
            app:drawableTint="@color/white" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>